--- a/src/components/Content/Game/Board.css
+++ b/src/components/Content/Game/Board.css
@@ -4,3 +4,7 @@
     border: 0px;
     border-style: solid;
 }
+
+.row {
+    display: flex;
+}
